--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "react-native-keyboard-controller",
   "version": "1.11.5",
   "description": "Keyboard manager which works in identical way on both iOS and Android",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
-  "types": "lib/typescript/index.d.ts",
+  "main": "src/index",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
